--- a/style.css
+++ b/style.css
@@ -3,14 +3,7 @@
   font-family: Gotham Rounded;
 }
 
-:root {
-  --hue-neutral: 200;
-  --hue-wrong: 0;
-  --hue-correct: 145;
-}
-
 body {
-  --hue: var(--hue-neutral);
   padding: 0;
   margin: 0;
   display: flex;
@@ -18,16 +11,8 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background-color: hsl(var(--hue), 100%, 20%);
 }
 
-body.correct {
-  --hue: var(--hue-correct);
-}
-
-body.wrong {
-  --hue: var(--hue-wrong);
-}
 .intro {
   text-align: center;
 }
@@ -38,7 +23,8 @@ body.wrong {
   background-color: white;
   border-radius: 5px;
   padding: 10px;
-  box-shadow: 0 0 10px 2px;
+  border: solid; 
+  border-color: pink;
 }
 
 .btn-grid {
@@ -49,9 +35,8 @@ body.wrong {
 }
 
 .btn {
-  --hue: var(--hue-neutral);
-  border: 1px solid hsl(var(--hue), 100%, 30%);
-  background-color: hsl(var(--hue), 100%, 50%);
+  border: 1px solid;
+  background-color: blue;
   border-radius: 5px;
   padding: 5px 10px;
   color: white;
@@ -63,18 +48,21 @@ body.wrong {
 }
 
 .btn.correct {
-  --hue: var(--hue-correct);
-  color: black;
+  background-color: green;
 }
 
 .btn.wrong {
-  --hue: var(--hue-wrong);
+  background-color: red;
 }
 
 .start-btn, .next-btn {
   font-size: 1.5rem;
   font-weight: bold;
   padding: 10px 20px;
+}
+
+.timer {
+  text-align: right;
 }
 
 .controls {
